@@ -19,28 +19,27 @@ package com.echothree.control.user.search.server.command;
 import com.echothree.control.user.search.common.form.SearchEntityListItemsForm;
 import com.echothree.control.user.search.common.result.SearchEntityListItemsResult;
 import com.echothree.control.user.search.common.result.SearchResultFactory;
+import com.echothree.model.control.core.server.search.EntityListItemSearchEvaluator;
 import com.echothree.model.control.party.server.logic.LanguageLogic;
 import com.echothree.model.control.search.common.SearchKinds;
 import com.echothree.model.control.search.server.control.SearchControl;
-import com.echothree.model.control.core.server.search.EntityListItemSearchEvaluator;
 import com.echothree.model.control.search.server.logic.SearchLogic;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.server.persistence.Session;
 import com.google.common.base.Splitter;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class SearchEntityListItemsCommand
         extends BaseSearchCommand<SearchEntityListItemsForm, SearchEntityListItemsResult> {
-    
+
+    // No COMMAND_SECURITY_DEFINITION, anyone may execute this command.
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("LanguageIsoName", FieldType.ENTITY_NAME, false, null, null),
                 new FieldDefinition("SearchDefaultOperatorName", FieldType.ENTITY_NAME, false, null, null),
                 new FieldDefinition("SearchSortDirectionName", FieldType.ENTITY_NAME, false, null, null),
@@ -52,7 +51,7 @@ public class SearchEntityListItemsCommand
                 new FieldDefinition("Fields", FieldType.STRING, false, null, null),
                 new FieldDefinition("RememberPreferences", FieldType.BOOLEAN, false, null, null),
                 new FieldDefinition("SearchUseTypeName", FieldType.ENTITY_NAME, false, null, null)
-                ));
+        );
     }
 
     /** Creates a new instance of SearchEntityListItemsCommand */
